# open-paws-corporate-watch

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  README.md
.desloppify/: plan.json  plan.json.bak  progression.jsonl  query.json  state-python.json  state-python.json.bak
backend/: pyproject.toml
backend/src/api/: server.py
backend/src/commitments/: detector.py  models.py  tracker.py
backend/src/monitoring/: scraper.py
backend/src/scoring/: scorecard.py
backend/src/supply_chain/: risk_scorer.py
data/commitments/: seed.json
frontend/src/components/: CommitmentTimeline.tsx  ScoreCard.tsx  SupplyChainMap.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/company/: [id].tsx
